# iredis

./: .bumpversion.cfg  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CloudRunDockerfile  Dockerfile  LICENSE  MANIFEST.in  README.md  TODO  a.txt  appendonly.aof  cloudbuild.yaml  color.css  command_syntax.csv  commands.csv  commands.json  dev-requirements.txt  example.py  main.py  pyoxidizer.template.bzl  pyproject.toml  r.py  requirements.txt  setup.py  ssh.md  t.py  tmp.result
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: release.yaml  test-binary-build.yaml  test.yaml  unittest.yaml
docs/: commands.csv  update-redis-doc.md
docs/assets/: demo.cast  render.md
docs/cloudrun/: readme.md
docs/cloudshell/: run-in-docker.txt
iredis/: __init__.py  bottom.py  client.py  commands.py  commands_csv_loader.py  completers.py  config.py  connection.py  entry.py  exceptions.py  key_bindings.py  lexer.py  markdown.py  output.py  processors.py  redis_commands.py  redis_grammar.py  redis_lexer.py  renders.py  session.py  slot_render.py  style.py  tokenizer.py  utils.py  warning.py
iredis/data/: command_syntax.csv  commands-new.json  commands.json  dangerous_commands.csv  iredisrc  old-commands.json
iredis/data/commands/: _index.md  acl-cat.md  acl-deluser.md  acl-dryrun.md  acl-genpass.md  acl-getuser.md  acl-help.md  acl-list.md  acl-load.md  acl-log.md  acl-save.md  acl-setuser.md  acl-users.md  acl-whoami.md  acl.md  append.md  asking.md  auth.md  bgrewriteaof.md  bgsave.md  bitcount.md  bitfield.md  bitfield_ro.md  bitop.md  bitpos.md  blmove.md  blmpop.md  blpop.md  brpop.md  brpoplpush.md  bzmpop.md  bzpopmax.md  bzpopmin.md  client-caching.md  client-getname.md  client-getredir.md  client-help.md  client-id.md  client-info.md  client-kill.md  (+336 more)
scripts/: add_fooset_commands.txt  add_hash.txt  add_lists.txt  add_myzset_commands.txt  aof_redis.conf  check_renders.sh  display_all_command_hints.py  download_redis_commands.py  multi_del.redisCmds  redis.conf  set_999_keys_in_redis.py  tcp-proxy.sh  update_command_from_redis_doc.sh
scripts/conf/slave/: slave.conf
tests/: conftest.py  helpers.py  redis.conf  test_base_token.py  test_client.py  test_cluster_command_parse.py  test_command_input.py  test_command_parse.py  test_commandline.py  test_completers.py  test_connection_command_parse.py  test_entry.py  test_generic_command_parse.py  test_hll_parse.py  test_output_function.py  test_prompt.py  test_render_functions.py  test_script.py  test_string_command_execute.py  test_string_command_parse.py  test_transaction.py  test_utils.py  test_warning.py
tests/cli_tests/: pager_boundary.sh  pager_boundary_number.sh  test_cli_pubsub.py  test_cli_start.py  test_command_input.py  test_command_restore.py  test_completer.py  test_config.py  test_dsn.py  test_history.py  test_on_error.py  test_pager.py  test_self_implemented_command.py  test_server_start.py  test_shell_pipeline.py  test_string_execute.py  test_transaction.py  test_warning.py  wrappager.py
tests/command_execute/: test_string_execute.py
tests/command_parse/: test_base_token.py  test_cluster.py  test_connection.py  test_generic.py  test_generic_parse.py  test_geo.py  test_hash_parse.py  test_list_parse.py  test_pubsub.py  test_script.py  test_server.py  test_set_parse.py  test_sorted_set_commandz_pass.py  test_sorted_set_parse.py  test_stream.py  test_string_parse.py
tests/unittests/: test_client.py  test_completers.py  test_entry.py  test_markdown_doc_render.py  test_render_functions.py  test_utils.py
tests/unittests/command_parse/: test_base_token.py  test_cluster.py  test_connection.py  test_generic_parse.py  test_geo.py  test_hash_parse.py  test_hll_parse.py  test_list_parse.py  test_pubsub.py  test_script.py  test_server.py  test_sorted_set_parse.py  test_stream.py  test_string_parse.py
