[tool.poetry]
name = "iredis"
version = "1.9.3"
description = "Terminal client for Redis with auto-completion and syntax highlighting."
authors = ["laixintao <laixintao1995@163.com>"]
readme = 'README.md'
license = "BSD-3-Clause"
repository = 'https://github.com/laixintao/iredis'
homepage = "https://github.com/laixintao/iredis"
keywords=["Redis", "key-value store", "Commandline tools", "Redis Client"]
classifiers = [
# see https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Environment :: MacOS X",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]

packages = [
    { include = "iredis" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.6"
redis = "^3"
prompt_toolkit = "^3"
Pygments = "^2"
mistune = "^0.8"
configobj = "^5.0"
click = "^7.0"
pendulum = "^2.0"
importlib-resources = "^5.1.0"
# wcwidth 0.2.x uses pkg_resources which is not supported by PyOxidizer
wcwidth = "0.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5"
pexpect = "^4.7"

[tool.poetry.scripts]
iredis = 'iredis.entry:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
